# djaodjin-multitier

./: .gitignore  Makefile  README.md  changelog  pyproject.toml  requirements.txt  setup.py
multitier/: __init__.py  compat.py  context_processors.py  finders.py  locals.py  middleware.py  mixins.py  models.py  routers.py  settings.py  template_loader.py  thread_locals.py  urlresolvers.py  urlresolvers_py3_django2.py  utils.py
multitier/loaders/: django.py  jinja2.py
multitier/templatetags/: multitier_static.py  multitier_tags.py
testsite/: requirements-legacy.txt  requirements.txt  settings.py  urls.py  wsgi.py
testsite/fixtures/: example1.json  example2.json  test_data.json
testsite/management/commands/: send_test_email.py
testsite/templates/: base.html  index.html
testsite/templates/example1/: index.html
testsite/templates/example2/: index.html
testsite/templates/registration/: login.html
themes/example1/templates/: index.html
themes/example2/templates/: index.html
